# pyclaw

./: .dockerignore  .gitignore  CHANGELOG.md  CLA.md  COMMERCIAL-LICENSE.md  Dockerfile  LICENSE  Makefile  README.md  README_CN.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
configs/: prompt-budget-examples.md  pyclaw.example.json  pyclaw.example.yaml
deploy/: .env.example  docker-compose.multi.yml  nginx-dev.conf  nginx.conf
deploy/scripts/: affinity_status.py  redis_clean.py
docs/: README.md  context-engine.md  openclaw-analysis.md  skill-hub-compatibility.md
docs/en/: README.md  architecture-decisions.md  compaction-guide.md  configuration.md  deployment.md  mcp.md  multi-user-deployment.md  openclaw-analysis.md  permissions.md  roadmap.md  sandbox.md  session-design.md  timeouts-and-abort.md  typescript-vs-python.md  upstream-compaction-audit.md
docs/zh/: README.md  architecture-decisions.md  compaction-guide.md  configuration.md  context-engine.md  deployment.md  feishu-channel-brainstorm.md  mcp.md  multi-user-deployment.md  openclaw-analysis.md  permissions.md  roadmap.md  sandbox.md  session-design.md  skill-hub-compatibility.md  timeouts-and-abort.md  typescript-vs-python.md  upstream-compaction-audit.md
reports/: add-mcp-client-ship-2026-05-16.md  affinity-gateway-smoke-2026-05-15.md  e2e-results.xml  fix-tool-approval-and-permission-tiers-ship-2026-05-15.md  optimize-web-ui-mvp-ship-2026-05-15.md  session-commands-smoke-2026-05-01.md  sprint-2.0.1-hotfix-smoke-2026-05-16.md  sprint-3-ship-2026-05-16.md  test-report-2026-05-01.md  test-report-2026-05-03-memory-store.md
scripts/: build-frontend.sh  dev-frontend.sh  e2e_phase1_redis.py  e2e_phase2_curator.py  e2e_phase3_feishu_checklist.md  feishu_send.py  inspect_sop_state.py  simulate_feishu_reaction.py  sop_test_inspect.py  sop_test_logwatch.sh  start.sh  verify_memory_live.py
src/pyclaw/: __init__.py  app.py
src/pyclaw/auth/: __init__.py  handler_helpers.py  profile.py  profile_store.py  roles.py  tier_resolution.py  tools_requiring_approval.py
src/pyclaw/channels/: __init__.py  base.py  models.py  registry.py  session_router.py
src/pyclaw/cli/: __init__.py  skills.py
src/pyclaw/core/: __init__.py  context_engine.py  curator.py  curator_admin.py  curator_cycle.py  curator_state.py  hooks.py  memory_archive.py  session_export.py  skill_graduation.py  sop_extraction.py
src/pyclaw/gateway/: __init__.py  affinity.py  event_codec.py  forwarder.py  router.py  worker_registry.py
src/pyclaw/infra/: __init__.py  audit_logger.py  redis.py  settings.py  task_inspection.py  task_manager.py
src/pyclaw/integrations/: __init__.py
src/pyclaw/models/: __init__.py  agent.py  config.py  session.py  utils.py
src/pyclaw/orchestration/: __init__.py
src/pyclaw/sandbox/: __init__.py  env_strip.py  no_sandbox.py  policy.py  srt.py  state.py
src/pyclaw/skills/: __init__.py  clawhub_client.py  discovery.py  eligibility.py  installer.py  management.py  models.py  parser.py  prompt.py  provider.py
src/pyclaw/storage/: __init__.py  protocols.py
tests/e2e/: conftest.py  test_agent_e2e.py  test_curator_e2e.py
tests/helpers/: command_context.py
tests/integration/: test_app_curator_wiring.py  test_lifespan_shutdown.py  test_mcp_e2e.py  test_mcp_failure_modes.py  test_memory_e2e.py  test_self_evolution_e2e.py  test_sprint3_invariants_preserved.py  test_sprint3_phase1_e2e.py  test_steer_wiring.py  test_task_owner_backfill.py  test_tool_approval_e2e.py
tests/integration/commands/: test_command_integration.py  test_compact_command.py  test_export_command.py  test_model_command.py
tests/integration/core/: test_agent_runner.py  test_curator_concurrency.py  test_e2e_harden_agent.py  test_runner_context_engineering.py  test_runner_incomplete_turn.py  test_runner_prefix_cache_e2e.py  test_runner_streaming.py  test_runner_timeouts.py  test_runner_tool_loop.py
tests/integration/storage/: conftest.py  test_redis_session_store.py  test_redis_workspace_store.py  test_session_store_redis_extensions.py
tests/integration/web/: test_web_integration.py
tests/unit/app/: test_app_feishu.py  test_app_startup.py
tests/unit/auth/: test_profile.py  test_profile_store.py  test_role_precedence.py  test_tools_requiring_approval_replace.py
tests/unit/channels/: test_channel_dispatch.py  test_feishu_adapter_idle_guard.py  test_feishu_client_bot_messages.py  test_feishu_dedup.py  test_feishu_handler.py  test_feishu_multimodal.py  test_feishu_queue.py  test_feishu_queue_is_idle.py  test_feishu_reaction.py  test_feishu_streaming.py  test_handler_integration.py  test_last_usage_wiring.py  test_session_idle_reset.py  test_session_queue_run_control.py
tests/unit/cli/: test_skills_curator.py
tests/unit/core/: test_context_engine.py  test_context_engine_bootstrap.py  test_context_engine_hardening.py  test_context_engine_l4.py  test_context_engine_memory.py  test_context_engine_retrieval_strategy.py  test_curator.py  test_curator_admin.py  test_curator_cycle.py  test_curator_cycle_class.py  test_curator_graduation_integration.py  test_curator_heartbeat.py  test_curator_integration.py  test_curator_loop.py  test_curator_state.py  test_extraction_triggers.py  test_graduation_e2e.py  test_hooks.py  test_hooks_isolation.py  test_llm_review.py  (+7 more)
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  protocol.ts  types.ts
(+300 files in other folders)
