[project]
name = "pyclaw"
version = "0.1.0"
description = "Python rewrite of OpenClaw - a multi-channel AI assistant gateway with compute-storage separation"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.12"
authors = [
    { name = "PyClaw Contributors" },
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "redis[hiredis]>=5.2.0",
    "httpx>=0.27.0",
    "litellm>=1.50.0",
    "pyyaml>=6.0.0",
    "apscheduler>=3.10.0",
    "lark-oapi>=2.3.0",
]

[project.optional-dependencies]
postgres = [
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "pgvector>=0.3.0",
]
sqlite = [
    "aiosqlite>=0.20.0",
    "sqlite-vec>=0.1.6",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "testcontainers[redis,postgres]>=4.0.0",
    "respx>=0.21.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
]

[project.scripts]
pyclaw = "pyclaw.app:main"
pyclaw-skill = "pyclaw.cli.skills:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyclaw"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: requires real Redis at PYCLAW_TEST_REDIS_* env vars",
    "e2e: end-to-end tests requiring real LLM API (PYCLAW_LLM_API_KEY env var)",
]
filterwarnings = [
    # lark-oapi 1.5.5 uses websockets.legacy which is deprecated in websockets>=14
    "ignore::DeprecationWarning:lark_oapi",
    "ignore::DeprecationWarning:websockets.legacy",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "ASYNC", "B", "SIM"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
