[project]
name = "pyclaw"
version = "0.1.0"
description = "Python rewrite of OpenClaw - a multi-channel AI assistant gateway with compute-storage separation"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.12"
authors = [
    { name = "PyClaw Contributors" },
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "redis[hiredis]>=5.2.0",
    "httpx>=0.27.0,<1.0",
    "litellm>=1.50.0",
    "pyyaml>=6.0.0",
    "apscheduler>=3.10.0",
    "lark-oapi>=1.6.2,<2.0.0",
]

[project.optional-dependencies]
postgres = [
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "pgvector>=0.3.0",
]
sqlite = [
    "apsw>=3.45.0",
    "jieba>=0.42.0",
    "sqlite-vec>=0.1.6",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "testcontainers[redis,postgres]>=4.0.0",
    "respx>=0.21.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
]

[project.scripts]
pyclaw = "pyclaw.app:main"
pyclaw-skill = "pyclaw.cli.skills:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyclaw"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: requires real Redis at PYCLAW_TEST_REDIS_* env vars",
    "e2e: end-to-end tests requiring real LLM API (PYCLAW_LLM_API_KEY env var)",
]
filterwarnings = [
    # lark-oapi 1.5.5 uses websockets.legacy which is deprecated in websockets>=14
    "ignore::DeprecationWarning:lark_oapi",
    "ignore::DeprecationWarning:websockets.legacy",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "ASYNC", "B", "SIM"]
ignore = [
    "ANN101",
    "ANN102",
    # Existing codebase carries pre-existing type-annotation gaps. Requiring
    # them on every commit would mass-rewrite touched files. New code SHOULD
    # add annotations but the linter doesn't fail on the legacy gap.
    "ANN001",  # missing-type-function-argument
    "ANN201",  # missing-return-type-undocumented-public-function
    "ANN202",  # missing-return-type-private-function
    "ANN204",  # missing-return-type-special-method
    "ANN205",  # missing-return-type-static-method
    "ANN206",  # missing-return-type-class-method
    "ANN002",  # missing-type-args (*args)
    "ANN003",  # missing-type-kwargs (**kwargs)
    "ANN401",  # any-type — required for SDK interop (lark-oapi event types
               #            and similar surfaces have no public stubs)
]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately need wide-open patterns (Exception assertions, magic
# variable names from fixtures, multi-with-statements). Keep these errors
# off the test path so signal-vs-noise stays high in production code.
"tests/**/*.py" = [
    "E501",     # line-too-long (test data + parametrize ids run wide)
    "B017",     # pytest.raises(Exception) — sometimes a deliberate breadth
    "E741",     # ambiguous-variable-name (l, I, O are common in test math)
    "SIM117",   # multiple-with-statements
    "F841",     # unused-variable (test setup may keep references for clarity)
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
